--- a/app/src/main/res/layout/stock_item_layout.xml
+++ b/app/src/main/res/layout/stock_item_layout.xml
@@ -2,9 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/stock_card_width"
+    android:layout_width="match_parent"
     android:layout_height="@dimen/stock_card_height"
-    app:cardCornerRadius="@dimen/corner_raduis_big"
+    android:layout_marginBottom="@dimen/margin_small_s"
+    app:cardCornerRadius="@dimen/corner_radius_big"
     app:cardElevation="@dimen/elevation_zero">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,6 +31,7 @@
                 android:id="@+id/logo_image_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:importantForAccessibility="no"
                 android:scaleType="centerCrop"
                 tools:background="@color/colorGrey" />
 
