--- a/app/src/main/res/layout/stock_item_layout.xml
+++ b/app/src/main/res/layout/stock_item_layout.xml
@@ -9,10 +9,10 @@
     app:cardElevation="@dimen/elevation_zero">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/stock_item_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true"
-        android:focusable="true">
+        android:background="?attr/selectableItemBackground">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/logo"
