--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorGreen">#24B35D</color>
     <color name="colorRed">#B32424</color>
     <color name="colorYellow">#FFCA1C</color>
+    <color name="colorPaleGreyBlue">#F0F4F7</color>
 </resources>
