--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorWhite</item>
         <item name="colorPrimaryDark">@color/colorWhite</item>
@@ -15,11 +15,23 @@
         <item name="android:textColor">@color/colorBlack</item>
     </style>
 
+    <style name="TextAppearance.AppTheme.Headline2.NonCaps" parent="@style/TextAppearance.AppCompat.Headline">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
     <style name="TextAppearance.AppTheme.Body" parent="@style/TextAppearance.AppCompat.Body1">
         <item name="android:textSize">12sp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/colorBlack</item>
+    </style>
+
+    <style name="TextAppearance.AppTheme.Headline2.NonCaps.Grey" parent="@style/TextAppearance.AppTheme.Headline2.NonCaps">
+        <item name="android:textColor">@color/colorGrey</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 </resources>
