добавлен переход в активити с детальной инфой при клике на элемент в ресайклерах в табах
Переход в активити детал. инфы из поиска, активити детал. инфы и мелкие правки дизайна
- контент в активити с детальной инфой
- добавлен переход в активити с детальной инфой при клике на элемент в ресайклере в активити поиска
- поправлено форматирование чисел
- добавлена полосатая раскраска

Правка по окраске списка в ресайклере, добавлен текст ошибки загрузки на экран детальной инфы

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorRed">#B32424</color>
     <color name="colorYellow">#FFCA1C</color>
     <color name="colorPaleGreyBlue">#F0F4F7</color>
+    <color name="colorBlue">#1AA0FB</color>
 </resources>
