--- a/app/src/main/res/layout/stock_item_layout.xml
+++ b/app/src/main/res/layout/stock_item_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView android:id="@+id/stock_card_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -60,11 +61,14 @@
 
         <TextView
             android:id="@+id/companyName"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/constraint_match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_medium_xs"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppTheme.Body"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/priceChange"
             app:layout_constraintStart_toStartOf="@+id/ticker"
             tools:text="Yandex, LLC" />
 
