добавлена постраничная загрузка - и добавленные в избранное грузятся отдельно - фикс пустого экрана на загрузке при выкл интернете, когда нельзя сделать запрос на сервер для поиска похожих на запрос тикеров (не стала делать поиск похожих в базе при отсутствии интернета, похожие тикеры берутся из ответа сервера)

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
 
     <!-- padding -->
     <dimen name="padding_small_s">8dp</dimen>
+    <dimen name="padding_small">12dp</dimen>
     <dimen name="padding_medium">16dp</dimen>
 
     <!-- corner radius -->
