--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -101,6 +101,7 @@
         android:id="@+id/web_url_text"
         android:layout_width="@dimen/constraint_match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_medium"
         android:layout_marginStart="@dimen/margin_medium_xs"
         android:ellipsize="end"
         android:focusable="true"
@@ -128,6 +129,7 @@
         android:id="@+id/industry_text"
         android:layout_width="@dimen/constraint_match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_medium"
         android:layout_marginStart="@dimen/margin_medium_xs"
         android:ellipsize="end"
         android:maxLines="2"
